Issue #34433 consolidate version dependent function